--- a/app/index.html
+++ b/app/index.html
@@ -1,34 +1,110 @@
 <!doctype html>
 <html>
-  <head>
+<head>
     <title>Chattrbox</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/stylesheets/styles.css">
-  </head>
-  <body class="container chat-wrapper">
+    <!--    <link rel="stylesheet" href="stylesheets/styles.css" type="text/css">-->
+    <style type="text/css">
+        html, body {
+            height: 100%;
+        }
 
-    <header class="chat-app-header">
-      <h1>Chattrbox</h1>
-    </header>
+        body {
+            padding-bottom: 10px
+        }
 
-    <div class="panel panel-default chat-messages">
-        <ul class="panel-body chat-message-list" data-chat="message-list"></ul>
-    </div>
+        .chat-wrapper {
+            display: flex;
+            height: 100%;
+            flex-direction: column;
+        }
 
-    <section class="chat-input">
-      <form data-chat="chat-form" class="cb-container">
+        .chat-messages {
+            flex: 3;
+            overflow-y: auto;
+        }
+
+        ul, ul.panel-body {
+            margin: 0;
+            padding: 0;
+        }
+
+        .odd {
+            background: #eee;
+        }
+
+        .message-row {
+            list-style-type: none;
+            padding: 4px 12px;
+            display: flex;
+        }
+
+        .message-row img {
+            padding-right: 1em;
+            /* flex: auto; */
+            border-radius: 15px;
+        }
+
+        .message-row p {
+            /* flex: auto; */
+        }
+
+        .me {
+            /* justify-content: flex-end; */
+            flex-direction: row-reverse;
+        }
+
+        .me img {
+            padding-right: 0;
+            padding-left: 1em;
+        }
+
+        .me p {
+            text-align: right;
+        }
+
+        .message-username {
+            font-weight: bold;
+        }
+
+        .message-message {
+            display: block;
+        }
+
+        .message-username + .timestamp {
+            padding-left: 8px;
+        }
+
+        .timestamp {
+            font-style: italic;
+            /*        display: block; */
+        }
+    </style>
+</head>
+<body class="container chat-wrapper">
+
+<header class="chat-app-header">
+    <h1>Chattrbox</h1>
+</header>
+
+<div class="panel panel-default chat-messages">
+    <ul class="panel-body chat-message-list" data-chat="message-list"></ul>
+</div>
+
+<section class="chat-input">
+    <form data-chat="chat-form" class="cb-container">
         <div class="input-group">
-          <label for="js-message-input" class="sr-only">Message:</label>
-          <input type="text" class="form-control" data-chat="message-input" autofocus>
-          <span class="input-group-btn">
+            <label for="js-message-input" class="sr-only">Message:</label>
+            <input type="text" class="form-control" data-chat="message-input" id="js-message-input" autofocus>
+            <span class="input-group-btn">
             <button class="btn btn-default" type="button">Go!</button>
           </span>
         </div><!-- /input-group -->
-      </form>
-    </section>
+    </form>
+</section>
 
-    <script src="/scripts/dist/main.js"></script>
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js" type="text/javascript" charset="utf-8"></script> -->
-  </body>
+<script src="scripts/dist/main.js"></script>
+<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js" type="text/javascript" charset="utf-8"></script> -->
+</body>
 </html>
 
